# quick-preact-ssr

./: CMakeLists.quickjs.txt  CMakeLists.txt  Makefile  README.md  app.js  client.js  htm.c  index.html  preact-render-to-string.js  preact.c  server.js  style.css  tiny.c
quickjs/: quickjs-libc.c  quickjs.c  quickjs.h
